# lipcoding

./: .copilot-codeGeneration-instructions.md  .envrc  .gitignore  README.md  main.py  openapi.json  openapi_formatted.json  pyproject.toml  pytest.ini  start-backend.sh  start_frontend.sh  요구사항.md
.github/prompts/: htmx.prompt.md  jwt_guide.prompt.md  python.prompt.md  structure.prompt.md
lipcoding/: db.sqlite3  manage.py
lipcoding/api/: api.py  models.py  schemas.py  services.py  test_api.py  test_auth.py  test_matching.py  test_profile.py  test_services.py  tests.py
lipcoding/api/migrations/: 0001_initial.py  0002_skill_profile.py  0003_matchrequest.py  0004_profile_image_content_type_profile_image_data.py
lipcoding/frontend/: urls.py  views.py
lipcoding/frontend/templates/frontend/: base.html  dashboard.html  index.html  mentors.html  profile.html  requests.html
lipcoding/lipcoding/: asgi.py  settings.py  urls.py  wsgi.py
