[project]
name = "lipcoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "django-extensions>=4.1",
    "django-ninja>=1.4.3",
    "django-ninja-extra>=0.30.1",
    "pyjwt>=2.10.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.1",
]
